Fix environment variable