@@ -885,28 +885,6 @@ project(':mohist') {
         }
         libraries.add("${project.group}:${project.name}:${project.version}:launcher")
         runs {
-            client {
-                main 'net.minecraftforge.userdev.LaunchTesting'
-
-                // Support mod devs running on Java 8 and up, including 16
-                jvmArgs '-XX:+IgnoreUnrecognizedVMOptions'
-                jvmArgs '--add-exports=java.base/sun.security.util=ALL-UNNAMED'
-                jvmArgs '--add-exports=jdk.naming.dns/com.sun.jndi.dns=java.naming'
-                jvmArgs '--add-opens=java.base/java.util.jar=ALL-UNNAMED'
-
-                environment 'target', 'fmluserdevclient'
-                environment 'assetIndex', '{asset_index}'
-                environment 'assetDirectory', '{assets_root}'
-                environment 'nativesDirectory', '{natives}'
-
-                environment 'MC_VERSION', "${MC_VERSION}"
-                environment 'FORGE_GROUP', "${project.group}"
-                environment 'MCP_VERSION', "${MCP_VERSION}"
-                environment 'MOD_CLASSES', '{source_roots}'
-                environment 'MCP_MAPPINGS', '{mcp_mappings}'
-                environment 'FORGE_VERSION', "${project.version.substring(MC_VERSION.length() + 1)}"
-            }
-
             server {
                 main 'net.minecraftforge.userdev.LaunchTesting'
 
@@ -923,7 +901,8 @@ project(':mohist') {
                 environment 'MCP_VERSION', "${MCP_VERSION}"
                 environment 'MOD_CLASSES', '{source_roots}'
                 environment 'MCP_MAPPINGS', '{mcp_mappings}'
-                environment 'FORGE_VERSION', "${project.version.substring(MC_VERSION.length() + 1)}"
+                environment 'FORGE_VERSION', "${forge_version}"
+                environment 'MOHIST_VERSION', "${project.version.substring(MC_VERSION.length() + 1)}"
             }
 
             data {
@@ -944,7 +923,8 @@ project(':mohist') {
                 environment 'MCP_VERSION', "${MCP_VERSION}"
                 environment 'MOD_CLASSES', '{source_roots}'
                 environment 'MCP_MAPPINGS', '{mcp_mappings}'
-                environment 'FORGE_VERSION', "${project.version.substring(MC_VERSION.length() + 1)}"
+                environment 'FORGE_VERSION', "${forge_version}"
+                environment 'MOHIST_VERSION', "${project.version.substring(MC_VERSION.length() + 1)}"
             }
         }
     }
